2008-03-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/python_embed/python_module/py_glom_module.cc (initglom):
	Added more casts to non-const char* from static strings, to 
	avoid warnings with Python. Python should use const char*, of course.

2008-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc ui_file_select_open_with_browse():
	Fixed a typo in my previous commit, to fix the build.

2008-03-13  Murray Cumming  <murrayc@murrayc.com>

	Bug 521992 – Pressing Escape on Initial dialog does not close 
	application properly.
	(Pavel Mlčoch)

	* glom/dialog_database_preferences.cc load_from_document():
	Do not crash if the Gda::DataModel is empty.

	* glom/application.cc ui_file_select_save(), on_document_load(),
	  offer_new_or_existing():
	* glom/frame_glom.cc on_menu_file_export():
	* glom/utility_widgets/imageglom.cc
	  on_menupopup_activate_select_file(): Check for 
	Gtk::RESPONSE_DELETE_EVENT instead of just Gtk::RESPONSE_CANCEL, so 
	that we treat pressing Escape the same as pressing Cancel. When we 
	just ignore this then we can leave the application in an unexpected 
	state.

2008-03-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	discover_first_free_port() Reformat the code to make the use of 
	ifdefs for various platforms clearer. Include errno.h and add a comment 
	about how this is essential to make the code actually work.
	This stops Glom from starting a postgres instance on the same port that 
	is used by an existing instance.
	start_self_hosting(): Set the port in the document so it is not 
	incorrectly set again later. This fixes the problem that Glom sometimes 
	started a server and then could not connect to it.

2008-03-09  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.cc: Don't try to use remembered port
	when m_port is 0. This broke connections to non-self-hosted database
	servers since the connection attempt was only performed on port 0.
